# phulax

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  README.md  STRATEGY.md  checklist.md  docker-compose.yml  how-to-finetune.md  idea.md  inference_optimization.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  todo-before-demo.md
agent/: .env.example  README.md  package.json  pnpm-lock.yaml  tsconfig.json
contracts/: .env.example  .gitignore  README.md  foundry.toml  inft.json  package.json  wagmi.config.ts
deploy/: .env.example  Caddyfile  Dockerfile.agent  Dockerfile.web  README.md  fix-kh-db.sh
inference/: .gitignore  Dockerfile  README.md  fly.toml  requirements.txt  server.py  test_server.py
ml/: .env.example  .gitignore  README.md  artifacts.json  og_client.py  pyproject.toml  training-todo.md
ml/artifacts/og-ft/: dataset.jsonl  manifest.json  run.json  training-config.json
ml/data/: benign.py  build_dataset.py  dataset.jsonl  exploits.py  hard_benign.py  holdout.py  scrape_real.py
ml/embed/: index.py
ml/eval/: HOLDOUT_REPORT.md  REPORT.md  harness.py  holdout.py  inspect_errors.py
ml/finetune/: colab_train.ipynb  lora.py  merge_and_quantize.py  og_emit.py
ml/prompt/: template.py
ml/scripts/: og.mjs  package-lock.json  package.json
ml/upload/: og_storage.py
scripts/: render_diagrams.py  send-benign.sh  send-nefarious.sh
tasks/: todo.md
web/: .env.example  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
workflows/: inference-and-kv-get-put.workflow.json  (+3 more)
(+103 files in other folders)
